--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 				<div class="col-md-4">
     				<div class="blog-entry ftco-animate">
-							<a href="#" class="img img-2" style="background-image: url(images/jayantimasi.png);"></a>
+							<a href="#" class="img img-2" style="background-image: url(images/Jayantimasi.png);"></a>
 							<div class="text text-2 pt-2 mt-3">
 								<span class="category mb-3 d-block"><a href="#">Jawhar and Jayanti Surana</a></span>
 	              <h3 class="mb-4"><a href="#">Happy anniversary kakaji kakiji</a></h3>
@@ -328,7 +328,7 @@ Chappal vale Dada Dadi to
 				</div>
 				<div class="col-md-4">
     				<div class="blog-entry ftco-animate">
-							<a href="#" class="img img-2" style="background-image: url(images/khusbhoomasi.png);"></a>
+							<a href="#" class="img img-2" style="background-image: url(images/Khusbhoomasi.png);"></a>
 							<div class="text text-2 pt-2 mt-3">
 								<span class="category mb-3 d-block"><a href="#">Ashutosh and Khushboo Surana</a></span>
 	              <h3 class="mb-4"><a href="#">सात वचनों से अपने रिश्ते को सजाया है, इस रिश्ते को आपने बखूबी निभाया है,
