--- a/rewind.html
+++ b/rewind.html
@@ -69,7 +69,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_2.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_2.JPG);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>02</h3>
